--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,13 @@ pm_to_blib
 MANIFEST
 META.yml
 MYMETA.*
-META.json
 META.yml
 README
 Ukigumo-Client-*/
 ^inc/
+/Ukigumo-Client-*
+/.build
+/_build_params
+/Build
+!Build/
+!META.json
