.ukigumo.yml move to eg/

--- a/.ukigumo.yml
+++ b/.ukigumo.yml
@@ -1,4 +1,1 @@
-before_install:
-  - "cpanm -L $HOME/.ukigumo/ukigumo-client/extlib --installdeps -n ."
-install: "ln -s $HOME/.ukigumo/ukigumo-client/extlib ./extlib"
-script: prove -lrv -Iextlib/lib/perl5 t
+eg/_ukigumo.yml
